fix: spacing between paragraphs in tables

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -135,6 +135,7 @@
 }
 
 .doc .tableblock p {
+  margin-bottom: 0.5rem;
   font-size: inherit;
   hyphens: none;
 }
